--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
 	},
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"test": "mocha --exit"
 	},
 	"dependencies": {
 		"express": "^4.16.2",
 		"knex": "^0.14.6",
 		"morgan": "^1.9.0",
 		"pg": "^7.4.1"
+	},
+	"devDependencies": {
+		"chai": "^4.1.2",
+		"chai-http": "^4.0.0",
+		"mocha": "^5.1.1"
 	}
 }
