--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"test": "mocha --exit"
+		"test": "cross-env NODE_ENV=test mocha"
 	},
 	"dependencies": {
 		"express": "^4.16.2",
@@ -20,6 +20,7 @@
 	"devDependencies": {
 		"chai": "^4.1.2",
 		"chai-http": "^4.0.0",
+		"cross-env": "^5.1.4",
 		"mocha": "^5.1.1"
 	}
 }
